--- a/lab-02-sad-plot.Rmd
+++ b/lab-02-sad-plot.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Lab 02 - Take a sad plot and make it better"
-author: "Group Members: Hugh, Innes, Kiera and user4"
+author: "Group Members: Hugh, Innes, Kiera , Caitlyn "
 date: "`r Sys.Date()`"
 output: html_document
 ---
