--- a/lab-02-sad-plot.Rmd
+++ b/lab-02-sad-plot.Rmd
@@ -25,10 +25,10 @@ Team member 1 should pull to download updates and begins here.
 
 ### Exercise 1
 
-*Remove this text and add your answer here. No code needed for this exercise!*
+The data will have 11 rows, one for each year.
 
 
-Team member 1 should knit, stage & commit, and push all changes to GitHub.
+
 
 --------
 
